--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /Servers/
 semoProject/WebContent/WEB-INF/jspwork/org/apache/jsp/index_jsp.class
 semoProject/WebContent/WEB-INF/jspwork/org/apache/jsp/index_jsp.java
+Servers/Tomcat v8.5 Server at localhost-config/server.xml
